<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.android.myappportfolio.MainActivity">

    <TextView
        android:paddingTop="30dp"
        android:paddingBottom="30dp"
        android:textSize="20sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/main_title" />

    <Button
        android:id="@+id/movies_button_main_menue"
        style="@style/MainMenuButtonStyle"
        android:layout_marginTop="5dp"
        android:text="@string/popular_movies_button_main_menu" />

    <Button
        android:id="@+id/stock_button_main_menue"
        style="@style/MainMenuButtonStyle"
        android:layout_marginTop="5dp"
        android:text="@string/stock_hawk_button_main_menu" />

    <Button
        android:id="@+id/bigger_button_button_main_menue"
        style="@style/MainMenuButtonStyle"
        android:text="@string/build_it_bigger_button_main_menu" />

    <Button
        android:id="@+id/material_button_main_menue"
        style="@style/MainMenuButtonStyle"
        android:text="@string/make_your_app_material_button_main_menu" />

    <Button
        android:id="@+id/ubiquitous_button_main_menue"
        style="@style/MainMenuButtonStyle"
        android:text="@string/go_ubiquitous_button_main_menu" />

    <Button
        android:id="@+id/capstone_button_main_menue"
        style="@style/MainMenuButtonStyle"
        android:text="@string/capstone_button_main_menu" />


</LinearLayout>
